welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: missing parameter type
  if ((a=>10) && (a=<20) || (b=>10) && (b=<20)){
       ^in1020:2: error: value =< is not a member of Int
  if ((a=>10) && (a=<20) || (b=>10) && (b=<20)){
                   ^in1020:2: error: missing parameter type
  if ((a=>10) && (a=<20) || (b=>10) && (b=<20)){
                             ^in1020:2: error: value =< is not a member of Int
  if ((a=>10) && (a=<20) || (b=>10) && (b=<20)){
                                         ^